--- a/index.html
+++ b/index.html
@@ -26,9 +26,17 @@
     }
     input, select, button {
       padding: 10px;
-      margin: 5px;
+      margin: 5px 0;
       width: 100%;
       box-sizing: border-box;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+    button {
+      background-color: #2c3e50;
+      color: white;
+      border: none;
+      cursor: pointer;
     }
     .balance {
       font-size: 1.5em;
@@ -47,6 +55,35 @@
     }
     th {
       background: #ecf0f1;
+    }
+    @media (max-width: 600px) {
+      .container {
+        padding: 10px;
+      }
+      input, select, button {
+        font-size: 14px;
+      }
+      .balance {
+        font-size: 1.2em;
+      }
+      table, thead, tbody, th, td, tr {
+        display: block;
+      }
+      tr {
+        margin-bottom: 10px;
+        border: 1px solid #ccc;
+        padding: 10px;
+        background: #fafafa;
+      }
+      td {
+        border: none;
+        padding: 5px 0;
+      }
+      td::before {
+        content: attr(data-label);
+        font-weight: bold;
+        display: block;
+      }
     }
   </style>
 </head>
@@ -83,6 +120,7 @@
       <th>Transaction ID</th>
       <th>Amount</th>
       <th>Date & Time</th>
+      <th>Action</th>
     </tr>
   </thead>
   <tbody id="expenseList"></tbody>
@@ -100,16 +138,18 @@
     function renderExpenses() {
       const table = document.getElementById('expenseList');
       table.innerHTML = '';
-      expenses.forEach(exp => {
-        const row = table.insertRow();
+      expenses.forEach((exp, index) => {
+        const row = document.createElement('tr');
         row.innerHTML = `
-          <td>${exp.type}</td>
-          <td>${exp.name}</td>
-          <td>${exp.product || '-'}</td>
-          <td>${exp.transactionId}</td>
-          <td>₹${parseFloat(exp.amount).toFixed(2)}</td>
-          <td>${exp.datetime}</td>
+          <td data-label="Type">${exp.type}</td>
+          <td data-label="Name">${exp.name}</td>
+          <td data-label="Product">${exp.product || '-'}</td>
+          <td data-label="Transaction ID">${exp.transactionId}</td>
+          <td data-label="Amount">₹${parseFloat(exp.amount).toFixed(2)}</td>
+          <td data-label="Date & Time">${exp.datetime}</td>
+          <td data-label="Action"><button onclick="deleteExpense(${index})">Delete</button></td>
         `;
+        table.appendChild(row);
       });
     }
 
@@ -152,7 +192,14 @@
       }
     }
 
-    // Load on page load
+    function deleteExpense(index) {
+      balance += parseFloat(expenses[index].amount);
+      expenses.splice(index, 1);
+      localStorage.setItem('expenses', JSON.stringify(expenses));
+      updateBalance();
+      renderExpenses();
+    }
+
     updateBalance();
     renderExpenses();
   </script></body>
