--- a/index.html
+++ b/index.html
@@ -2,241 +2,202 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Personal Expense Tracker</title>
+  <title>Expense Tracker</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
+    * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      background: #f4f4f4;
+      font-family: Arial, sans-serif;
     }
-    header {
-      background: #2c3e50;
-      color: white;
+    body {
+      background: #f0f2f5;
       padding: 20px;
-      text-align: center;
     }
     .container {
-      max-width: 900px;
-      margin: 20px auto;
-      padding: 20px;
+      max-width: 800px;
+      margin: auto;
       background: white;
+      padding: 20px;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    input, select, button {
-      padding: 10px;
-      margin: 5px 0;
-      width: 100%;
-      box-sizing: border-box;
-      border-radius: 5px;
-      border: 1px solid #ccc;
+    h1 {
+      text-align: center;
+      margin-bottom: 20px;
     }
-    button {
-      background-color: #2c3e50;
+    .balance-section {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 20px;
+    }
+    .balance-edit {
+      display: none;
+    }
+    .form {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 10px;
+      margin-bottom: 20px;
+    }
+    .form input, .form select {
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+    .form button {
+      grid-column: span 2;
+      padding: 10px;
+      background: #007bff;
       color: white;
       border: none;
+      border-radius: 5px;
       cursor: pointer;
     }
-    .balance {
-      font-size: 1.5em;
-      color: green;
-      margin-bottom: 10px;
-    }
-    .edit-balance {
-      margin-top: 5px;
-      font-size: 14px;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
+    .transactions {
       margin-top: 20px;
     }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 8px;
-      text-align: left;
+    .transaction {
+      background: #f9f9f9;
+      padding: 10px;
+      border-left: 5px solid #007bff;
+      margin-bottom: 10px;
+      position: relative;
     }
-    th {
-      background: #ecf0f1;
+    .transaction .delete {
+      position: absolute;
+      right: 10px;
+      top: 10px;
+      color: red;
+      cursor: pointer;
     }
-    @media (max-width: 600px) {
-      .container {
-        padding: 10px;
-      }
-      input, select, button {
-        font-size: 14px;
-      }
-      .balance {
-        font-size: 1.2em;
-      }
-      table, thead, tbody, th, td, tr {
-        display: block;
-      }
-      tr {
-        margin-bottom: 10px;
-        border: 1px solid #ccc;
-        padding: 10px;
-        background: #fafafa;
-      }
-      td {
-        border: none;
-        padding: 5px 0;
-      }
-      td::before {
-        content: attr(data-label);
-        font-weight: bold;
-        display: block;
-      }
+    .download-btn {
+      background: green;
+      color: white;
+      padding: 10px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-top: 10px;
     }
   </style>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
-  <header>
-    <h1>My Expense Tracker</h1>
-  </header>
   <div class="container">
-    <div class="balance">
-      Total Balance: ₹<span id="balance">0</span>
-    </div>
-    <input type="number" id="editBalance" placeholder="Edit Total Balance" />
-    <button onclick="setBalance()">Set Balance</button><input type="number" id="addBalance" placeholder="Add to Balance" />
-<button onclick="addToBalance()">Add</button>
+    <h1>Expense Tracker</h1>
+    <div class="balance-section">
+      <h2>Balance: ₹<span id="balance">0</span></h2>
+      <div>
+        <button onclick="toggleEdit()">Edit</button>
+        <div class="balance-edit">
+          <input type="number" id="editBalance" placeholder="Enter Balance">
+          <button onclick="saveBalance()">Save</button>
+        </div>
+      </div>
+    </div><form class="form" onsubmit="addTransaction(event)">
+  <select id="type">
+    <option value="shop">Shop</option>
+    <option value="cab">Cab</option>
+    <option value="website">Website</option>
+    <option value="transport">Transport</option>
+  </select>
+  <input type="text" id="title" placeholder="Name/Details" required />
+  <input type="text" id="transactionId" placeholder="Transaction ID" required />
+  <input type="text" id="extra" placeholder="Extra Info (Product/Company/Website)" />
+  <input type="number" id="amount" placeholder="Amount" required />
+  <input type="datetime-local" id="datetime" required />
+  <button type="submit">Add Transaction</button>
+</form>
 
-<h3>New Expense Entry</h3>
-<select id="type">
-  <option value="shop">Shop</option>
-  <option value="cab">Cab</option>
-  <option value="website">Website</option>
-  <option value="travel">Train/Bus/Flight</option>
-</select>
-
-<input type="text" id="name" placeholder="Shop/Cab/Website/Travel Company Name" />
-<input type="text" id="product" placeholder="Product Name (if any)" />
-<input type="text" id="transactionId" placeholder="Transaction ID" />
-<input type="number" id="amount" placeholder="Amount" />
-<input type="datetime-local" id="datetime" />
-<button onclick="addExpense()">Add Expense</button>
-
-<button onclick="downloadPDF()">Download PDF</button>
-
-<table>
-  <thead>
-    <tr>
-      <th>Type</th>
-      <th>Name</th>
-      <th>Product</th>
-      <th>Transaction ID</th>
-      <th>Amount</th>
-      <th>Date & Time</th>
-      <th>Action</th>
-    </tr>
-  </thead>
-  <tbody id="expenseList"></tbody>
-</table>
+<div class="transactions" id="transactions"></div>
+<button class="download-btn" onclick="downloadPDF()">Download PDF</button>
 
   </div>  <script>
+    let transactions = JSON.parse(localStorage.getItem('transactions')) || [];
     let balance = parseFloat(localStorage.getItem('balance')) || 0;
-    let expenses = JSON.parse(localStorage.getItem('expenses')) || [];
 
-    function updateBalance() {
-      document.getElementById('balance').innerText = balance.toFixed(2);
-      localStorage.setItem('balance', balance);
+    function updateBalanceDisplay() {
+      document.getElementById("balance").innerText = balance.toFixed(2);
     }
 
-    function renderExpenses() {
-      const table = document.getElementById('expenseList');
-      table.innerHTML = '';
-      expenses.forEach((exp, index) => {
-        const row = document.createElement('tr');
-        row.innerHTML = `
-          <td data-label="Type">${exp.type}</td>
-          <td data-label="Name">${exp.name}</td>
-          <td data-label="Product">${exp.product || '-'}</td>
-          <td data-label="Transaction ID">${exp.transactionId}</td>
-          <td data-label="Amount">₹${parseFloat(exp.amount).toFixed(2)}</td>
-          <td data-label="Date & Time">${exp.datetime}</td>
-          <td data-label="Action"><button onclick="deleteExpense(${index})">Delete</button></td>
-        `;
-        table.appendChild(row);
-      });
-    }
-
-    function addToBalance() {
-      const addAmount = parseFloat(document.getElementById('addBalance').value);
-      if (!isNaN(addAmount) && addAmount > 0) {
-        balance += addAmount;
-        updateBalance();
-        document.getElementById('addBalance').value = '';
-      }
-    }
-
-    function setBalance() {
-      const newBalance = parseFloat(document.getElementById('editBalance').value);
+    function saveBalance() {
+      const newBalance = parseFloat(document.getElementById("editBalance").value);
       if (!isNaN(newBalance)) {
         balance = newBalance;
-        updateBalance();
-        document.getElementById('editBalance').value = '';
+        localStorage.setItem("balance", balance);
+        updateBalanceDisplay();
+        document.querySelector(".balance-edit").style.display = "none";
       }
     }
 
-    function addExpense() {
-      const type = document.getElementById('type').value;
-      const name = document.getElementById('name').value;
-      const product = document.getElementById('product').value;
-      const transactionId = document.getElementById('transactionId').value;
-      const amount = parseFloat(document.getElementById('amount').value);
-      const datetime = document.getElementById('datetime').value;
-
-      if (!isNaN(amount) && amount > 0 && name && transactionId && datetime) {
-        if (amount > balance) {
-          alert("Insufficient balance!");
-          return;
-        }
-        balance -= amount;
-        updateBalance();
-
-        const newExpense = { type, name, product, transactionId, amount, datetime };
-        expenses.push(newExpense);
-        localStorage.setItem('expenses', JSON.stringify(expenses));
-
-        renderExpenses();
-
-        document.getElementById('name').value = '';
-        document.getElementById('product').value = '';
-        document.getElementById('transactionId').value = '';
-        document.getElementById('amount').value = '';
-        document.getElementById('datetime').value = '';
-      }
+    function toggleEdit() {
+      const editBox = document.querySelector(".balance-edit");
+      editBox.style.display = editBox.style.display === "none" ? "block" : "none";
     }
 
-    function deleteExpense(index) {
-      balance += parseFloat(expenses[index].amount);
-      expenses.splice(index, 1);
-      localStorage.setItem('expenses', JSON.stringify(expenses));
-      updateBalance();
-      renderExpenses();
+    function addTransaction(event) {
+      event.preventDefault();
+      const type = document.getElementById("type").value;
+      const title = document.getElementById("title").value;
+      const transactionId = document.getElementById("transactionId").value;
+      const extra = document.getElementById("extra").value;
+      const amount = parseFloat(document.getElementById("amount").value);
+      const datetime = document.getElementById("datetime").value;
+
+      const entry = { id: Date.now(), type, title, transactionId, extra, amount, datetime };
+      transactions.push(entry);
+      balance -= amount;
+
+      localStorage.setItem("transactions", JSON.stringify(transactions));
+      localStorage.setItem("balance", balance);
+
+      renderTransactions();
+      updateBalanceDisplay();
+      event.target.reset();
     }
 
-    async function downloadPDF() {
-      const { jsPDF } = window.jspdf;
-      const doc = new jsPDF();
-      doc.text("My Expense Report", 10, 10);
-      let y = 20;
-      expenses.forEach((exp, i) => {
-        doc.text(${i+1}. ${exp.type.toUpperCase()} | ${exp.name} | ₹${exp.amount} | ${exp.datetime}, 10, y);
-        y += 10;
-        if (y > 280) {
-          doc.addPage();
-          y = 10;
-        }
+    function deleteTransaction(id) {
+      const entry = transactions.find(t => t.id === id);
+      if (entry) balance += entry.amount;
+      transactions = transactions.filter(t => t.id !== id);
+      localStorage.setItem("transactions", JSON.stringify(transactions));
+      localStorage.setItem("balance", balance);
+      renderTransactions();
+      updateBalanceDisplay();
+    }
+
+    function renderTransactions() {
+      const list = document.getElementById("transactions");
+      list.innerHTML = "";
+      transactions.forEach(t => {
+        const div = document.createElement("div");
+        div.className = "transaction";
+        div.innerHTML = `
+          <strong>${t.type.toUpperCase()}</strong><br>
+          ${t.title} | ₹${t.amount} <br>
+          ${t.transactionId} | ${t.extra} <br>
+          ${t.datetime}<br>
+          <span class="delete" onclick="deleteTransaction(${t.id})">✖</span>
+        `;
+        list.appendChild(div);
       });
-      doc.text(\nTotal Balance: ₹${balance.toFixed(2)}, 10, y + 10);
-      doc.save("expense_report.pdf");
     }
 
-    updateBalance();
-    renderExpenses();
+    function downloadPDF() {
+      let content = Balance: ₹${balance.toFixed(2)}\n\n;
+      transactions.forEach(t => {
+        content += Type: ${t.type}\nTitle: ${t.title}\nAmount: ₹${t.amount}\nTransaction ID: ${t.transactionId}\nExtra: ${t.extra}\nDate/Time: ${t.datetime}\n\n;
+      });
+
+      const blob = new Blob([content], { type: "application/pdf" });
+      const link = document.createElement("a");
+      link.href = URL.createObjectURL(blob);
+      link.download = "transactions.pdf";
+      link.click();
+    }
+
+    renderTransactions();
+    updateBalanceDisplay();
   </script></body>
 </html>
