--- a/index.html
+++ b/index.html
@@ -2,193 +2,158 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Expense Tracker</title>
+  <title>Personal Expense Tracker</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      padding: 20px;
       margin: 0;
-      background-color: #f4f4f4;
+      padding: 0;
+      background: #f4f4f4;
     }
-    h2 {
+    header {
+      background: #2c3e50;
+      color: white;
+      padding: 20px;
       text-align: center;
     }
-    #balance-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-bottom: 20px;
-    }
-    #balance-display {
-      font-size: 24px;
-      margin-right: 10px;
-    }
-    #balance-edit, #save-balance {
-      padding: 5px 10px;
-      margin-left: 5px;
-    }
-    form, .transaction-list {
+    .container {
+      max-width: 900px;
       margin: 20px auto;
-      max-width: 500px;
-      background: white;
       padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    input, select {
-      width: 100%;
-      padding: 8px;
-      margin: 10px 0;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    button {
-      padding: 10px 15px;
-      background-color: #28a745;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #218838;
-    }
-    .transaction-item {
-      background: #fff;
-      border: 1px solid #ccc;
-      border-radius: 4px;
+    input, select, button {
       padding: 10px;
+      margin: 5px;
+      width: 100%;
+      box-sizing: border-box;
+    }
+    .balance {
+      font-size: 1.5em;
+      color: green;
       margin-bottom: 10px;
     }
-    .delete-btn {
-      float: right;
-      background-color: #dc3545;
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
     }
-    .delete-btn:hover {
-      background-color: #c82333;
+    th, td {
+      border: 1px solid #ccc;
+      padding: 8px;
+      text-align: left;
     }
-    @media (max-width: 600px) {
-      form, .transaction-list {
-        width: 90%;
-      }
+    th {
+      background: #ecf0f1;
     }
   </style>
 </head>
 <body>
-  <h2>Expense Tracker</h2>
-  <div id="balance-container">
-    <div id="balance-display">Balance: ₹<span id="balance">0</span></div>
-    <button id="balance-edit">Edit</button>
-    <button id="save-balance" style="display:none">Save</button>
-    <input type="number" id="balance-input" style="display:none; width: 120px; margin-left: 10px;" />
-  </div>
-  <form id="transaction-form">
-    <select id="type">
-      <option value="shop">Shop</option>
-      <option value="cap">Cap</option>
-      <option value="website">Website</option>
-      <option value="transport">Transport</option>
-    </select>
-    <input type="text" id="name" placeholder="Name/Website/Product/Company" required />
-    <input type="text" id="transaction-id" placeholder="Transaction ID" required />
-    <input type="number" id="amount" placeholder="Amount" required />
-    <input type="datetime-local" id="date-time" required />
-    <button type="submit">Add Transaction</button>
-  </form>
-  <div class="transaction-list" id="transaction-list"></div>
-  <button onclick="downloadPDF()">Download PDF</button>  <script>
-    const balanceDisplay = document.getElementById("balance");
-    const balanceEditBtn = document.getElementById("balance-edit");
-    const saveBalanceBtn = document.getElementById("save-balance");
-    const balanceInput = document.getElementById("balance-input");
-    const transactionForm = document.getElementById("transaction-form");
-    const transactionList = document.getElementById("transaction-list");
+  <header>
+    <h1>My Expense Tracker</h1>
+  </header>
+  <div class="container">
+    <div class="balance">
+      Total Balance: ₹<span id="balance">0</span>
+    </div>
+    <input type="number" id="addBalance" placeholder="Add to Balance" />
+    <button onclick="addToBalance()">Add</button><h3>New Expense Entry</h3>
+<select id="type">
+  <option value="shop">Shop</option>
+  <option value="cab">Cab</option>
+  <option value="website">Website</option>
+  <option value="travel">Train/Bus/Flight</option>
+</select>
 
-    let transactions = JSON.parse(localStorage.getItem("transactions")) || [];
-    let balance = parseFloat(localStorage.getItem("balance")) || 0;
+<input type="text" id="name" placeholder="Shop/Cab/Website/Travel Company Name" />
+<input type="text" id="product" placeholder="Product Name (if any)" />
+<input type="text" id="transactionId" placeholder="Transaction ID" />
+<input type="number" id="amount" placeholder="Amount" />
+<input type="datetime-local" id="datetime" />
+<button onclick="addExpense()">Add Expense</button>
+
+<table>
+  <thead>
+    <tr>
+      <th>Type</th>
+      <th>Name</th>
+      <th>Product</th>
+      <th>Transaction ID</th>
+      <th>Amount</th>
+      <th>Date & Time</th>
+    </tr>
+  </thead>
+  <tbody id="expenseList"></tbody>
+</table>
+
+  </div>  <script>
+    let balance = parseFloat(localStorage.getItem('balance')) || 0;
+    let expenses = JSON.parse(localStorage.getItem('expenses')) || [];
 
     function updateBalance() {
-      balanceDisplay.textContent = balance.toFixed(2);
-      localStorage.setItem("balance", balance);
+      document.getElementById('balance').innerText = balance.toFixed(2);
+      localStorage.setItem('balance', balance);
     }
 
-    function saveTransaction() {
-      localStorage.setItem("transactions", JSON.stringify(transactions));
-    }
-
-    function renderTransactions() {
-      transactionList.innerHTML = "";
-      transactions.forEach((txn, index) => {
-        const div = document.createElement("div");
-        div.className = "transaction-item";
-        div.innerHTML = `
-          <strong>${txn.type.toUpperCase()}</strong><br>
-          Name: ${txn.name}<br>
-          Transaction ID: ${txn.transactionId}<br>
-          Amount: ₹${txn.amount}<br>
-          Date & Time: ${txn.dateTime}<br>
-          <button class="delete-btn" onclick="deleteTransaction(${index})">Delete</button>
+    function renderExpenses() {
+      const table = document.getElementById('expenseList');
+      table.innerHTML = '';
+      expenses.forEach(exp => {
+        const row = table.insertRow();
+        row.innerHTML = `
+          <td>${exp.type}</td>
+          <td>${exp.name}</td>
+          <td>${exp.product || '-'}</td>
+          <td>${exp.transactionId}</td>
+          <td>₹${parseFloat(exp.amount).toFixed(2)}</td>
+          <td>${exp.datetime}</td>
         `;
-        transactionList.appendChild(div);
       });
     }
 
-    function deleteTransaction(index) {
-      balance += parseFloat(transactions[index].amount);
-      transactions.splice(index, 1);
-      saveTransaction();
-      updateBalance();
-      renderTransactions();
+    function addToBalance() {
+      const addAmount = parseFloat(document.getElementById('addBalance').value);
+      if (!isNaN(addAmount) && addAmount > 0) {
+        balance += addAmount;
+        updateBalance();
+        document.getElementById('addBalance').value = '';
+      }
     }
 
-    balanceEditBtn.addEventListener("click", () => {
-      balanceInput.style.display = "inline-block";
-      saveBalanceBtn.style.display = "inline-block";
-      balanceInput.value = balance;
-    });
+    function addExpense() {
+      const type = document.getElementById('type').value;
+      const name = document.getElementById('name').value;
+      const product = document.getElementById('product').value;
+      const transactionId = document.getElementById('transactionId').value;
+      const amount = parseFloat(document.getElementById('amount').value);
+      const datetime = document.getElementById('datetime').value;
 
-    saveBalanceBtn.addEventListener("click", () => {
-      balance = parseFloat(balanceInput.value);
-      updateBalance();
-      balanceInput.style.display = "none";
-      saveBalanceBtn.style.display = "none";
-    });
+      if (!isNaN(amount) && amount > 0 && name && transactionId && datetime) {
+        if (amount > balance) {
+          alert("Insufficient balance!");
+          return;
+        }
+        balance -= amount;
+        updateBalance();
 
-    transactionForm.addEventListener("submit", (e) => {
-      e.preventDefault();
-      const type = document.getElementById("type").value;
-      const name = document.getElementById("name").value;
-      const transactionId = document.getElementById("transaction-id").value;
-      const amount = parseFloat(document.getElementById("amount").value);
-      const dateTime = document.getElementById("date-time").value;
-      const txn = { type, name, transactionId, amount, dateTime };
-      transactions.push(txn);
-      balance -= amount;
-      saveTransaction();
-      updateBalance();
-      renderTransactions();
-      transactionForm.reset();
-    });
+        const newExpense = { type, name, product, transactionId, amount, datetime };
+        expenses.push(newExpense);
+        localStorage.setItem('expenses', JSON.stringify(expenses));
 
-    function downloadPDF() {
-      const win = window.open('', '', 'width=800,height=600');
-      win.document.write('<html><head><title>Transactions</title></head><body>');
-      win.document.write('<h2>Transaction List</h2>');
-      win.document.write(<p>Balance: ₹${balance.toFixed(2)}</p>);
-      transactions.forEach((txn, index) => {
-        win.document.write(`<p><strong>${txn.type.toUpperCase()}</strong><br>
-          Name: ${txn.name}<br>
-          Transaction ID: ${txn.transactionId}<br>
-          Amount: ₹${txn.amount}<br>
-          Date & Time: ${txn.dateTime}</p><hr>`);
-      });
-      win.document.write('</body></html>');
-      win.document.close();
-      win.print();
+        renderExpenses();
+
+        document.getElementById('name').value = '';
+        document.getElementById('product').value = '';
+        document.getElementById('transactionId').value = '';
+        document.getElementById('amount').value = '';
+        document.getElementById('datetime').value = '';
+      }
     }
 
-    // Initial Load
+    // Load on page load
     updateBalance();
-    renderTransactions();
+    renderExpenses();
   </script></body>
 </html>
