--- a/index.html
+++ b/index.html
@@ -2,27 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Personal Expense Tracker</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
       background: #f4f4f4;
     }
-
     header {
       background: #2c3e50;
       color: white;
       padding: 20px;
       text-align: center;
     }
-
     .container {
       max-width: 900px;
       margin: 20px auto;
@@ -31,78 +25,51 @@
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-
+    input, select, button {
+      padding: 10px;
+      margin: 5px;
+      width: 100%;
+      box-sizing: border-box;
+    }
     .balance {
       font-size: 1.5em;
       color: green;
       margin-bottom: 10px;
     }
-
-    input, select, button {
-      padding: 10px;
-      margin: 5px 0;
-      width: 100%;
-      font-size: 1em;
-    }
-
-    .btn-group {
+    .balance-edit {
       display: flex;
+      align-items: center;
       gap: 10px;
-      flex-wrap: wrap;
     }
-
-    button {
-      background: #2c3e50;
-      color: white;
-      border: none;
-      cursor: pointer;
-      transition: background 0.3s ease;
+    .balance-edit input {
+      width: auto;
+      flex-grow: 1;
     }
-
-    button:hover {
-      background: #1a252f;
-    }
-
     table {
       width: 100%;
       border-collapse: collapse;
       margin-top: 20px;
     }
-
     th, td {
       border: 1px solid #ccc;
       padding: 8px;
       text-align: left;
-      font-size: 0.95em;
     }
-
     th {
       background: #ecf0f1;
     }
-
-    .action-buttons button {
-      margin: 2px 5px;
+    .delete-btn {
+      background-color: #e74c3c;
+      color: white;
+      border: none;
       padding: 5px 10px;
-      font-size: 0.85em;
+      cursor: pointer;
+      border-radius: 5px;
     }
-
     @media screen and (max-width: 600px) {
-      .container {
-        padding: 10px;
-        margin: 10px;
-      }
-
-      th, td {
-        font-size: 0.85em;
-        padding: 6px;
-      }
-
-      input, select, button {
-        font-size: 0.9em;
-      }
-
-      .balance {
-        font-size: 1.2em;
+      .balance-edit {
+        flex-direction: column;
+        align-items: flex-start;
       }
     }
   </style>
@@ -111,28 +78,24 @@
   <header>
     <h1>My Expense Tracker</h1>
   </header>
-
   <div class="container">
-    <div class="balance">
-      Total Balance: ₹<span id="balance">0</span>
+    <div class="balance-edit">
+      <div class="balance">Total Balance: ₹<span id="balance">0</span></div>
+      <input type="number" id="editBalance" placeholder="Edit Balance"/>
+      <button onclick="editBalance()">Save</button>
     </div>
-
-    <div class="btn-group">
-      <input type="number" id="addBalance" placeholder="Add to Balance" />
-      <button onclick="addToBalance()">Add</button>
-    </div>
+    <input type="number" id="addBalance" placeholder="Add to Balance" />
+    <button onclick="addToBalance()">Add</button>
 
     <h3>New Expense Entry</h3>
-
     <select id="type">
       <option value="shop">Shop</option>
       <option value="cab">Cab</option>
       <option value="website">Website</option>
       <option value="travel">Train/Bus/Flight</option>
     </select>
-
-    <input type="text" id="name" placeholder="Name" />
-    <input type="text" id="product" placeholder="Product (Optional)" />
+    <input type="text" id="name" placeholder="Shop/Cab/Website/Travel Company Name" />
+    <input type="text" id="product" placeholder="Product Name (if any)" />
     <input type="text" id="transactionId" placeholder="Transaction ID" />
     <input type="number" id="amount" placeholder="Amount" />
     <input type="datetime-local" id="datetime" />
@@ -147,7 +110,7 @@
           <th>Transaction ID</th>
           <th>Amount</th>
           <th>Date & Time</th>
-          <th>Actions</th>
+          <th>Action</th>
         </tr>
       </thead>
       <tbody id="expenseList"></tbody>
@@ -175,9 +138,7 @@
           <td>${exp.transactionId}</td>
           <td>₹${parseFloat(exp.amount).toFixed(2)}</td>
           <td>${exp.datetime}</td>
-          <td class="action-buttons">
-            <button onclick="deleteExpense(${index})">Delete</button>
-          </td>
+          <td><button class="delete-btn" onclick="deleteExpense(${index})">Delete</button></td>
         `;
       });
     }
@@ -188,6 +149,15 @@
         balance += addAmount;
         updateBalance();
         document.getElementById('addBalance').value = '';
+      }
+    }
+
+    function editBalance() {
+      const newBalance = parseFloat(document.getElementById('editBalance').value);
+      if (!isNaN(newBalance) && newBalance >= 0) {
+        balance = newBalance;
+        updateBalance();
+        document.getElementById('editBalance').value = '';
       }
     }
 
@@ -210,6 +180,7 @@
         const newExpense = { type, name, product, transactionId, amount, datetime };
         expenses.push(newExpense);
         localStorage.setItem('expenses', JSON.stringify(expenses));
+
         renderExpenses();
 
         document.getElementById('name').value = '';
@@ -221,16 +192,14 @@
     }
 
     function deleteExpense(index) {
-      const refund = expenses[index].amount;
-      if (confirm(Do you want to delete this expense and refund ₹${refund}?)) {
-        balance += refund;
-        expenses.splice(index, 1);
-        updateBalance();
-        localStorage.setItem('expenses', JSON.stringify(expenses));
-        renderExpenses();
-      }
+      balance += parseFloat(expenses[index].amount);
+      updateBalance();
+      expenses.splice(index, 1);
+      localStorage.setItem('expenses', JSON.stringify(expenses));
+      renderExpenses();
     }
 
+    // Initialize
     updateBalance();
     renderExpenses();
   </script>
